--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
