--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios": "^0.18.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "update": "^0.7.4",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
